<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_25sdp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:padding="20dp" />

    <EditText
        android:id="@+id/et_password_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_signIn"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:padding="20dp" />

    <TextView
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_signIn"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_signIn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="#FF4500"
        android:src="@drawable/arrow_right"
        app:fabSize="normal" />

    <TextView
        android:id="@+id/go_to_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textColor="@color/colorBlack"
        android:textSize="17sp" />

    </RelativeLayout>

</ScrollView>